--- a/archives/toutiao-search/2024-02-17.md
+++ b/archives/toutiao-search/2024-02-17.md
@@ -1,63 +1,81 @@
 # 2024-02-17
 
-共 294 条
+共 308 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Feb 17 2024 21:00:44 GMT+0800 (China Standard Time) -->
-1. [女子返程高速4小时走了两三公里](https://so.toutiao.com/search?keyword=女子返程高速4小时走了两三公里)
+<!-- 最后更新时间 Sat Feb 17 2024 22:00:53 GMT+0800 (China Standard Time) -->
 1. [直击春节返程高峰](https://so.toutiao.com/search?keyword=直击春节返程高峰)
+1. [新疆14级大风](https://so.toutiao.com/search?keyword=新疆14级大风)
 1. [8组数据看热气腾腾的春节](https://so.toutiao.com/search?keyword=8组数据看热气腾腾的春节)
-1. [丽江游客回应不买5万玉器被赶下车](https://so.toutiao.com/search?keyword=丽江游客回应不买5万玉器被赶下车)
-1. [特朗普被罚超3.5亿美元](https://so.toutiao.com/search?keyword=特朗普被罚超3.5亿美元)
+1. [傅园慧包车遇临时加价 司机被罚3万](https://so.toutiao.com/search?keyword=傅园慧包车遇临时加价+司机被罚3万)
+1. [春节档票房破80亿创影史新高](https://so.toutiao.com/search?keyword=春节档票房破80亿创影史新高)
+1. [网友去年就在小区拍到瘦了的贾玲](https://so.toutiao.com/search?keyword=网友去年就在小区拍到瘦了的贾玲)
 1. [克宫：普京已知悉纳瓦利内死讯](https://so.toutiao.com/search?keyword=克宫：普京已知悉纳瓦利内死讯)
+1. [过年你花了多少钱](https://so.toutiao.com/search?keyword=过年你花了多少钱)
+1. [女子把马桶坐坏遭全家人围观](https://so.toutiao.com/search?keyword=女子把马桶坐坏遭全家人围观)
+1. [女子欲插队怒怼提醒者](https://so.toutiao.com/search?keyword=女子欲插队怒怼提醒者)
+1. [傅园慧说喜欢东北下次还来](https://so.toutiao.com/search?keyword=傅园慧说喜欢东北下次还来)
+1. [水果越酸维C含量越高？不一定](https://so.toutiao.com/search?keyword=水果越酸维C含量越高？不一定)
+1. [女子返程高速4小时走了两三公里](https://so.toutiao.com/search?keyword=女子返程高速4小时走了两三公里)
+1. [纳瓦利内妻子要求普京对其死亡负责](https://so.toutiao.com/search?keyword=纳瓦利内妻子要求普京对其死亡负责)
+1. [央媒追问：假如不是傅园慧呢](https://so.toutiao.com/search?keyword=央媒追问：假如不是傅园慧呢)
+1. [丽江游客回应不买5万玉器被赶下车](https://so.toutiao.com/search?keyword=丽江游客回应不买5万玉器被赶下车)
+1. [一艘油轮在红海被导弹击中](https://so.toutiao.com/search?keyword=一艘油轮在红海被导弹击中)
+1. [张艺谋导演电影票房破130亿](https://so.toutiao.com/search?keyword=张艺谋导演电影票房破130亿)
+1. [春节档电影好看吗](https://so.toutiao.com/search?keyword=春节档电影好看吗)
+1. [网友晒返程后备箱：2只羊够吃一年](https://so.toutiao.com/search?keyword=网友晒返程后备箱：2只羊够吃一年)
+1. [泽连斯基：纳瓦利内是被普京杀害的](https://so.toutiao.com/search?keyword=泽连斯基：纳瓦利内是被普京杀害的)
+1. [曾黎 回村后被打回了原型](https://so.toutiao.com/search?keyword=曾黎+回村后被打回了原型)
+1. [《红毯先生》退出春节档](https://so.toutiao.com/search?keyword=《红毯先生》退出春节档)
+1. [春节假期最后一天的状态](https://so.toutiao.com/search?keyword=春节假期最后一天的状态)
+1. [特朗普被罚超3.5亿美元](https://so.toutiao.com/search?keyword=特朗普被罚超3.5亿美元)
+1. [《飞驰人生2》技术还原跨时空对视](https://so.toutiao.com/search?keyword=《飞驰人生2》技术还原跨时空对视)
+1. [高速堵车鸡逃跑了 男子满山捉鸡](https://so.toutiao.com/search?keyword=高速堵车鸡逃跑了+男子满山捉鸡)
+1. [接连四部电影宣布撤出春节档](https://so.toutiao.com/search?keyword=接连四部电影宣布撤出春节档)
 1. [女婿新年拜访岳父 酒后打醉拳助兴](https://so.toutiao.com/search?keyword=女婿新年拜访岳父+酒后打醉拳助兴)
+1. [普京催促33岁电力公司员工要孩子](https://so.toutiao.com/search?keyword=普京催促33岁电力公司员工要孩子)
+1. [买200箱牛肉却检验出猪肉成分](https://so.toutiao.com/search?keyword=买200箱牛肉却检验出猪肉成分)
+1. [日本一县为提振生育率将赞助同学会](https://so.toutiao.com/search?keyword=日本一县为提振生育率将赞助同学会)
+1. [男生扮滴滴司机送女友回家](https://so.toutiao.com/search?keyword=男生扮滴滴司机送女友回家)
+1. [这才是小时候拜年的味道](https://so.toutiao.com/search?keyword=这才是小时候拜年的味道)
+1. [泰山初一到初七已待客35万人次](https://so.toutiao.com/search?keyword=泰山初一到初七已待客35万人次)
+1. [丽江文旅立案处理未买手镯被赶下车](https://so.toutiao.com/search?keyword=丽江文旅立案处理未买手镯被赶下车)
+1. [2024还有这些假期](https://so.toutiao.com/search?keyword=2024还有这些假期)
+1. [航拍狼群穿越雪山](https://so.toutiao.com/search?keyword=航拍狼群穿越雪山)
+1. [传比亚迪秦plus dmi将官降到7.98万](https://so.toutiao.com/search?keyword=传比亚迪秦plus+dmi将官降到7.98万)
+1. [电影撤档能换来票房大卖吗](https://so.toutiao.com/search?keyword=电影撤档能换来票房大卖吗)
+1. [特斯拉回应Cybertruck生锈问题](https://so.toutiao.com/search?keyword=特斯拉回应Cybertruck生锈问题)
+1. [《第二十条》现实意义](https://so.toutiao.com/search?keyword=《第二十条》现实意义)
+1. [媒体评春节档电影的成功与隐忧](https://so.toutiao.com/search?keyword=媒体评春节档电影的成功与隐忧)
+1. [马面裙成春节穿搭爆款](https://so.toutiao.com/search?keyword=马面裙成春节穿搭爆款)
+1. [专家：以色列或将面临“双线”作战](https://so.toutiao.com/search?keyword=专家：以色列或将面临“双线”作战)
+1. [台媒感叹大陆科技发展](https://so.toutiao.com/search?keyword=台媒感叹大陆科技发展)
+1. [过完年的戒断反应](https://so.toutiao.com/search?keyword=过完年的戒断反应)
 1. [一家人旅游时摆摊3天赚1000多](https://so.toutiao.com/search?keyword=一家人旅游时摆摊3天赚1000多)
+1. [00后女孩攒钱给奶奶翻新漏雨旧房](https://so.toutiao.com/search?keyword=00后女孩攒钱给奶奶翻新漏雨旧房)
+1. [新一批援助物资经拉法口岸进入加沙](https://so.toutiao.com/search?keyword=新一批援助物资经拉法口岸进入加沙)
 1. [12306说车库的车都开出去了](https://so.toutiao.com/search?keyword=12306说车库的车都开出去了)
 1. [第十四届全国冬季运动会开幕式](https://so.toutiao.com/search?keyword=第十四届全国冬季运动会开幕式)
-1. [纳瓦利内妻子要求普京对其死亡负责](https://so.toutiao.com/search?keyword=纳瓦利内妻子要求普京对其死亡负责)
-1. [水果越酸维C含量越高？不一定](https://so.toutiao.com/search?keyword=水果越酸维C含量越高？不一定)
-1. [航拍狼群穿越雪山](https://so.toutiao.com/search?keyword=航拍狼群穿越雪山)
-1. [网友去年就在小区拍到瘦了的贾玲](https://so.toutiao.com/search?keyword=网友去年就在小区拍到瘦了的贾玲)
-1. [央媒追问：假如不是傅园慧呢](https://so.toutiao.com/search?keyword=央媒追问：假如不是傅园慧呢)
-1. [春节档票房破80亿创影史新高](https://so.toutiao.com/search?keyword=春节档票房破80亿创影史新高)
 1. [孙子节后返程98岁奶奶不舍低声呜咽](https://so.toutiao.com/search?keyword=孙子节后返程98岁奶奶不舍低声呜咽)
 1. [新疆多地扬沙暴雪 骆驼为汽车领路](https://so.toutiao.com/search?keyword=新疆多地扬沙暴雪+骆驼为汽车领路)
 1. [日本一游客被同事推入15米深山谷](https://so.toutiao.com/search?keyword=日本一游客被同事推入15米深山谷)
 1. [专家称胖东来开除尝面员工处罚过重](https://so.toutiao.com/search?keyword=专家称胖东来开除尝面员工处罚过重)
-1. [泽连斯基：纳瓦利内是被普京杀害的](https://so.toutiao.com/search?keyword=泽连斯基：纳瓦利内是被普京杀害的)
-1. [过年你花了多少钱](https://so.toutiao.com/search?keyword=过年你花了多少钱)
-1. [高速堵车鸡逃跑了 男子满山捉鸡](https://so.toutiao.com/search?keyword=高速堵车鸡逃跑了+男子满山捉鸡)
-1. [女子把马桶坐坏遭全家人围观](https://so.toutiao.com/search?keyword=女子把马桶坐坏遭全家人围观)
-1. [《红毯先生》退出春节档](https://so.toutiao.com/search?keyword=《红毯先生》退出春节档)
-1. [女子欲插队怒怼提醒者](https://so.toutiao.com/search?keyword=女子欲插队怒怼提醒者)
-1. [春节档电影好看吗](https://so.toutiao.com/search?keyword=春节档电影好看吗)
-1. [网友晒返程后备箱：2只羊够吃一年](https://so.toutiao.com/search?keyword=网友晒返程后备箱：2只羊够吃一年)
 1. [男子带母亲试毛衣后未买遭店员嘲讽](https://so.toutiao.com/search?keyword=男子带母亲试毛衣后未买遭店员嘲讽)
-1. [接连四部电影宣布撤出春节档](https://so.toutiao.com/search?keyword=接连四部电影宣布撤出春节档)
-1. [传比亚迪秦plus dmi将官降到7.98万](https://so.toutiao.com/search?keyword=传比亚迪秦plus+dmi将官降到7.98万)
-1. [春节假期最后一天的状态](https://so.toutiao.com/search?keyword=春节假期最后一天的状态)
 1. [女子过完年后归家发现厨房污水倒灌](https://so.toutiao.com/search?keyword=女子过完年后归家发现厨房污水倒灌)
-1. [一艘油轮在红海被导弹击中](https://so.toutiao.com/search?keyword=一艘油轮在红海被导弹击中)
-1. [曾黎 回村后被打回了原型](https://so.toutiao.com/search?keyword=曾黎+回村后被打回了原型)
 1. [新疆畜牧部门积极应对寒潮天气](https://so.toutiao.com/search?keyword=新疆畜牧部门积极应对寒潮天气)
 1. [美官员：乌军问题或“进一步恶化”](https://so.toutiao.com/search?keyword=美官员：乌军问题或“进一步恶化”)
 1. [新款问界M7对比老款问界M7](https://so.toutiao.com/search?keyword=新款问界M7对比老款问界M7)
 1. [新疆阿勒泰：积极应对寒潮天气](https://so.toutiao.com/search?keyword=新疆阿勒泰：积极应对寒潮天气)
-1. [普京催促33岁电力公司员工要孩子](https://so.toutiao.com/search?keyword=普京催促33岁电力公司员工要孩子)
 1. [学者：未婚农村男性不再焦虑婚姻](https://so.toutiao.com/search?keyword=学者：未婚农村男性不再焦虑婚姻)
 1. [《南来北往》汪新马燕吃碗面乐不停](https://so.toutiao.com/search?keyword=《南来北往》汪新马燕吃碗面乐不停)
 1. [IMF前高官看好中国中长期发展前景](https://so.toutiao.com/search?keyword=IMF前高官看好中国中长期发展前景)
-1. [过完年的戒断反应](https://so.toutiao.com/search?keyword=过完年的戒断反应)
 1. [“断亲潮”风靡 需对亲情重新反思](https://so.toutiao.com/search?keyword=“断亲潮”风靡+需对亲情重新反思)
 1. [做好赛事服务 展现冰雪热潮](https://so.toutiao.com/search?keyword=做好赛事服务+展现冰雪热潮)
 1. [3月起横琴粤澳深度合作区将封关](https://so.toutiao.com/search?keyword=3月起横琴粤澳深度合作区将封关)
-1. [张艺谋导演电影票房破130亿](https://so.toutiao.com/search?keyword=张艺谋导演电影票房破130亿)
-1. [马面裙成春节穿搭爆款](https://so.toutiao.com/search?keyword=马面裙成春节穿搭爆款)
 1. [高叶去电影院看《第二十条》](https://so.toutiao.com/search?keyword=高叶去电影院看《第二十条》)
 1. [优质文旅产品让生活更美好](https://so.toutiao.com/search?keyword=优质文旅产品让生活更美好)
 1. [NASA飞机低空通过台上空](https://so.toutiao.com/search?keyword=NASA飞机低空通过台上空)
 1. [难民涌入拉法 民众生活日益艰难](https://so.toutiao.com/search?keyword=难民涌入拉法+民众生活日益艰难)
-1. [男生扮滴滴司机送女友回家](https://so.toutiao.com/search?keyword=男生扮滴滴司机送女友回家)
 1. [三亚部分返程机票回落至3000元档](https://so.toutiao.com/search?keyword=三亚部分返程机票回落至3000元档)
 1. [海口：车辆过海预计等待9小时以上](https://so.toutiao.com/search?keyword=海口：车辆过海预计等待9小时以上)
 1. [拉夫罗夫喊话乌克兰政府](https://so.toutiao.com/search?keyword=拉夫罗夫喊话乌克兰政府)
@@ -91,7 +109,6 @@
 1. [《我们一起摇太阳》紧急撤档背后](https://so.toutiao.com/search?keyword=《我们一起摇太阳》紧急撤档背后)
 1. [欧盟就纳瓦利内死亡指控俄 俄回应](https://so.toutiao.com/search?keyword=欧盟就纳瓦利内死亡指控俄+俄回应)
 1. [2024春节档票房创影史新高](https://so.toutiao.com/search?keyword=2024春节档票房创影史新高)
-1. [傅园慧说喜欢东北下次还来](https://so.toutiao.com/search?keyword=傅园慧说喜欢东北下次还来)
 1. [拜登威胁就纳瓦利内之死制裁俄罗斯](https://so.toutiao.com/search?keyword=拜登威胁就纳瓦利内之死制裁俄罗斯)
 1. [离家前爷爷在孙子水杯里藏钱和纸条](https://so.toutiao.com/search?keyword=离家前爷爷在孙子水杯里藏钱和纸条)
 1. [男子跑进奶茶店撞碎玻璃门](https://so.toutiao.com/search?keyword=男子跑进奶茶店撞碎玻璃门)
@@ -142,7 +159,6 @@
 1. [纳瓦利内死亡前一天身体状况良好](https://so.toutiao.com/search?keyword=纳瓦利内死亡前一天身体状况良好)
 1. [三亚返程机票一张近两万 律师回应](https://so.toutiao.com/search?keyword=三亚返程机票一张近两万+律师回应)
 1. [曝以军方下周提交拉法作战详细计划](https://so.toutiao.com/search?keyword=曝以军方下周提交拉法作战详细计划)
-1. [买200箱牛肉却检验出猪肉成分](https://so.toutiao.com/search?keyword=买200箱牛肉却检验出猪肉成分)
 1. [媒体：王毅访欧行程丰富 有三大任务](https://so.toutiao.com/search?keyword=媒体：王毅访欧行程丰富+有三大任务)
 1. [白敬亭金晨做客好六街](https://so.toutiao.com/search?keyword=白敬亭金晨做客好六街)
 1. [小车突然变道撞翻应急车道车辆](https://so.toutiao.com/search?keyword=小车突然变道撞翻应急车道车辆)
@@ -156,7 +172,6 @@
 1. [MVP榜：约基奇强势领跑 字母哥第三](https://so.toutiao.com/search?keyword=MVP榜：约基奇强势领跑+字母哥第三)
 1. [鲁媒：泰山队今天出征日本](https://so.toutiao.com/search?keyword=鲁媒：泰山队今天出征日本)
 1. [百岁新四军老战士朱泽逝世](https://so.toutiao.com/search?keyword=百岁新四军老战士朱泽逝世)
-1. [这才是小时候拜年的味道](https://so.toutiao.com/search?keyword=这才是小时候拜年的味道)
 1. [民航局回应三亚返程经济舱票难买](https://so.toutiao.com/search?keyword=民航局回应三亚返程经济舱票难买)
 1. [海南离岛机票松动](https://so.toutiao.com/search?keyword=海南离岛机票松动)
 1. [傅园慧长白山包车被勒索](https://so.toutiao.com/search?keyword=傅园慧长白山包车被勒索)
@@ -192,7 +207,6 @@
 1. [中国队世锦赛男子4×200自接夺冠](https://so.toutiao.com/search?keyword=中国队世锦赛男子4×200自接夺冠)
 1. [男子去女友家拜年喝“趴”被抬走](https://so.toutiao.com/search?keyword=男子去女友家拜年喝“趴”被抬走)
 1. [《熊出没·逆转时空》票房破13亿](https://so.toutiao.com/search?keyword=《熊出没·逆转时空》票房破13亿)
-1. [《第二十条》现实意义](https://so.toutiao.com/search?keyword=《第二十条》现实意义)
 1. [王灿称嫁给杜淳前就已实现财富自由](https://so.toutiao.com/search?keyword=王灿称嫁给杜淳前就已实现财富自由)
 1. [山东将有大范围降雨](https://so.toutiao.com/search?keyword=山东将有大范围降雨)
 1. [前巴萨主席候选人谈2021年梅西离开](https://so.toutiao.com/search?keyword=前巴萨主席候选人谈2021年梅西离开)
