--- a/archives/toutiao-search/2024-02-18.md
+++ b/archives/toutiao-search/2024-02-18.md
@@ -1,68 +1,80 @@
 # 2024-02-18
 
-共 83 条
+共 93 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sun Feb 18 2024 03:00:44 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sun Feb 18 2024 04:00:49 GMT+0800 (China Standard Time) -->
 1. [乌军从顿涅茨克地区重镇撤军](https://so.toutiao.com/search?keyword=乌军从顿涅茨克地区重镇撤军)
-1. [过年你花了多少钱](https://so.toutiao.com/search?keyword=过年你花了多少钱)
-1. [8组数据看热气腾腾的春节](https://so.toutiao.com/search?keyword=8组数据看热气腾腾的春节)
 1. [丽江文旅立案处理未买手镯被赶下车](https://so.toutiao.com/search?keyword=丽江文旅立案处理未买手镯被赶下车)
+1. [8组数据看热气腾腾的春节](https://so.toutiao.com/search?keyword=8组数据看热气腾腾的春节)
+1. [过年你花了多少钱](https://so.toutiao.com/search?keyword=过年你花了多少钱)
 1. [网友去年就在小区拍到瘦了的贾玲](https://so.toutiao.com/search?keyword=网友去年就在小区拍到瘦了的贾玲)
 1. [克宫：普京已知悉纳瓦利内死讯](https://so.toutiao.com/search?keyword=克宫：普京已知悉纳瓦利内死讯)
 1. [新疆14级大风](https://so.toutiao.com/search?keyword=新疆14级大风)
-1. [接连四部电影宣布撤出春节档](https://so.toutiao.com/search?keyword=接连四部电影宣布撤出春节档)
 1. [春节档电影好看吗](https://so.toutiao.com/search?keyword=春节档电影好看吗)
+1. [接连四部电影宣布撤出春节档](https://so.toutiao.com/search?keyword=接连四部电影宣布撤出春节档)
 1. [新疆特强沙尘暴：天空赤橙像异世界](https://so.toutiao.com/search?keyword=新疆特强沙尘暴：天空赤橙像异世界)
 1. [纳瓦利内妻子要求普京对其死亡负责](https://so.toutiao.com/search?keyword=纳瓦利内妻子要求普京对其死亡负责)
 1. [水果越酸维C含量越高？不一定](https://so.toutiao.com/search?keyword=水果越酸维C含量越高？不一定)
 1. [丽江游客回应不买5万玉器被赶下车](https://so.toutiao.com/search?keyword=丽江游客回应不买5万玉器被赶下车)
-1. [女子返程高速4小时走了两三公里](https://so.toutiao.com/search?keyword=女子返程高速4小时走了两三公里)
+1. [男子大年初三看色情网站被骗22万](https://so.toutiao.com/search?keyword=男子大年初三看色情网站被骗22万)
 1. [国台办再回应2名大陆渔民遇难](https://so.toutiao.com/search?keyword=国台办再回应2名大陆渔民遇难)
+1. [双边本币互换协议总规模约4.16万亿](https://so.toutiao.com/search?keyword=双边本币互换协议总规模约4.16万亿)
+1. [女子返程高速4小时走了两三公里](https://so.toutiao.com/search?keyword=女子返程高速4小时走了两三公里)
 1. [传比亚迪秦plus dmi将官降到7.98万](https://so.toutiao.com/search?keyword=传比亚迪秦plus+dmi将官降到7.98万)
+1. [买200箱牛肉却检验出猪肉成分](https://so.toutiao.com/search?keyword=买200箱牛肉却检验出猪肉成分)
+1. [今年春节海南出岛为什么这么难](https://so.toutiao.com/search?keyword=今年春节海南出岛为什么这么难)
 1. [《红毯先生》退出春节档](https://so.toutiao.com/search?keyword=《红毯先生》退出春节档)
+1. [专家：以色列或将面临“双线”作战](https://so.toutiao.com/search?keyword=专家：以色列或将面临“双线”作战)
+1. [航拍狼群穿越雪山](https://so.toutiao.com/search?keyword=航拍狼群穿越雪山)
+1. [美考虑为英特尔提供超百亿美元补贴](https://so.toutiao.com/search?keyword=美考虑为英特尔提供超百亿美元补贴)
+1. [国际金价近日跌破2000美元/盎司](https://so.toutiao.com/search?keyword=国际金价近日跌破2000美元/盎司)
+1. [媒体：中方出席慕安会维护全球稳定](https://so.toutiao.com/search?keyword=媒体：中方出席慕安会维护全球稳定)
+1. [女子高速上遭遇沙尘暴 车窗被砸烂](https://so.toutiao.com/search?keyword=女子高速上遭遇沙尘暴+车窗被砸烂)
+1. [如何评价断亲现象](https://so.toutiao.com/search?keyword=如何评价断亲现象)
+1. [美国抗议者在佩洛西家门口倒粪](https://so.toutiao.com/search?keyword=美国抗议者在佩洛西家门口倒粪)
+1. [有人初六返程 12小时路开了25小时](https://so.toutiao.com/search?keyword=有人初六返程+12小时路开了25小时)
+1. [湖北破获特大买卖国家机关证件案](https://so.toutiao.com/search?keyword=湖北破获特大买卖国家机关证件案)
+1. [一艘油轮在红海被导弹击中](https://so.toutiao.com/search?keyword=一艘油轮在红海被导弹击中)
+1. [日本男篮主帅：亚预赛想复仇中国队](https://so.toutiao.com/search?keyword=日本男篮主帅：亚预赛想复仇中国队)
+1. [15只业绩高预增股近三个月筹码集中](https://so.toutiao.com/search?keyword=15只业绩高预增股近三个月筹码集中)
+1. [女子过完年后归家发现厨房污水倒灌](https://so.toutiao.com/search?keyword=女子过完年后归家发现厨房污水倒灌)
+1. [国乒不剃光头的不成文规定为何没了](https://so.toutiao.com/search?keyword=国乒不剃光头的不成文规定为何没了)
+1. [自驾海南新能源车主抢老爸油车返程](https://so.toutiao.com/search?keyword=自驾海南新能源车主抢老爸油车返程)
+1. [过完年的戒断反应](https://so.toutiao.com/search?keyword=过完年的戒断反应)
+1. [黎巴嫩真主党：将升级在前线的行动](https://so.toutiao.com/search?keyword=黎巴嫩真主党：将升级在前线的行动)
+1. [泰国前总理他信将获释](https://so.toutiao.com/search?keyword=泰国前总理他信将获释)
+1. [媒体评薛之谦屏摄争议](https://so.toutiao.com/search?keyword=媒体评薛之谦屏摄争议)
+1. [台媒感叹大陆科技发展](https://so.toutiao.com/search?keyword=台媒感叹大陆科技发展)
+1. [ARM股价4日暴涨1.3倍](https://so.toutiao.com/search?keyword=ARM股价4日暴涨1.3倍)
+1. [女子把马桶坐坏遭全家人围观](https://so.toutiao.com/search?keyword=女子把马桶坐坏遭全家人围观)
+1. [广东为什么如此重视产业和科技](https://so.toutiao.com/search?keyword=广东为什么如此重视产业和科技)
+1. [多部门多措并举保障旅客顺利返程](https://so.toutiao.com/search?keyword=多部门多措并举保障旅客顺利返程)
+1. [狗子在高速被堵到生下一窝狗崽](https://so.toutiao.com/search?keyword=狗子在高速被堵到生下一窝狗崽)
+1. [OpenAI估值达到800亿美元](https://so.toutiao.com/search?keyword=OpenAI估值达到800亿美元)
+1. [王毅会见蒙古国外长巴特策策格](https://so.toutiao.com/search?keyword=王毅会见蒙古国外长巴特策策格)
+1. [春节假期利好不断 节后A股怎么走](https://so.toutiao.com/search?keyword=春节假期利好不断+节后A股怎么走)
 1. [马面裙成春节穿搭爆款](https://so.toutiao.com/search?keyword=马面裙成春节穿搭爆款)
 1. [国际法院就南非诉以色列案再作裁决](https://so.toutiao.com/search?keyword=国际法院就南非诉以色列案再作裁决)
-1. [买200箱牛肉却检验出猪肉成分](https://so.toutiao.com/search?keyword=买200箱牛肉却检验出猪肉成分)
-1. [美国抗议者在佩洛西家门口倒粪](https://so.toutiao.com/search?keyword=美国抗议者在佩洛西家门口倒粪)
-1. [国际金价近日跌破2000美元/盎司](https://so.toutiao.com/search?keyword=国际金价近日跌破2000美元/盎司)
-1. [女子高速上遭遇沙尘暴 车窗被砸烂](https://so.toutiao.com/search?keyword=女子高速上遭遇沙尘暴+车窗被砸烂)
 1. [新一批援助物资经拉法口岸进入加沙](https://so.toutiao.com/search?keyword=新一批援助物资经拉法口岸进入加沙)
-1. [狗子在高速被堵到生下一窝狗崽](https://so.toutiao.com/search?keyword=狗子在高速被堵到生下一窝狗崽)
-1. [媒体：中方出席慕安会维护全球稳定](https://so.toutiao.com/search?keyword=媒体：中方出席慕安会维护全球稳定)
 1. [今年春节出游人流量较2019年增45%](https://so.toutiao.com/search?keyword=今年春节出游人流量较2019年增45%)
 1. [郑渊洁父亲离世](https://so.toutiao.com/search?keyword=郑渊洁父亲离世)
-1. [女子过完年后归家发现厨房污水倒灌](https://so.toutiao.com/search?keyword=女子过完年后归家发现厨房污水倒灌)
 1. [女婿新年拜访岳父 酒后打醉拳助兴](https://so.toutiao.com/search?keyword=女婿新年拜访岳父+酒后打醉拳助兴)
-1. [过完年的戒断反应](https://so.toutiao.com/search?keyword=过完年的戒断反应)
-1. [OpenAI估值达到800亿美元](https://so.toutiao.com/search?keyword=OpenAI估值达到800亿美元)
 1. [湖北当阳市发布人事任免](https://so.toutiao.com/search?keyword=湖北当阳市发布人事任免)
-1. [自驾海南新能源车主抢老爸油车返程](https://so.toutiao.com/search?keyword=自驾海南新能源车主抢老爸油车返程)
 1. [全国各地大批粉丝赶来为林孝埈加油](https://so.toutiao.com/search?keyword=全国各地大批粉丝赶来为林孝埈加油)
-1. [女子把马桶坐坏遭全家人围观](https://so.toutiao.com/search?keyword=女子把马桶坐坏遭全家人围观)
-1. [日本男篮主帅：亚预赛想复仇中国队](https://so.toutiao.com/search?keyword=日本男篮主帅：亚预赛想复仇中国队)
-1. [有人初六返程 12小时路开了25小时](https://so.toutiao.com/search?keyword=有人初六返程+12小时路开了25小时)
 1. [《第二十条》现实意义](https://so.toutiao.com/search?keyword=《第二十条》现实意义)
 1. [日本一县为提振生育率将赞助同学会](https://so.toutiao.com/search?keyword=日本一县为提振生育率将赞助同学会)
-1. [台媒感叹大陆科技发展](https://so.toutiao.com/search?keyword=台媒感叹大陆科技发展)
-1. [王毅会见蒙古国外长巴特策策格](https://so.toutiao.com/search?keyword=王毅会见蒙古国外长巴特策策格)
 1. [纳赛尔将为姆巴佩举办盛大告别仪式](https://so.toutiao.com/search?keyword=纳赛尔将为姆巴佩举办盛大告别仪式)
-1. [春节假期利好不断 节后A股怎么走](https://so.toutiao.com/search?keyword=春节假期利好不断+节后A股怎么走)
 1. [姆巴佩弟弟：我会留在巴黎圣日耳曼](https://so.toutiao.com/search?keyword=姆巴佩弟弟：我会留在巴黎圣日耳曼)
-1. [专家：以色列或将面临“双线”作战](https://so.toutiao.com/search?keyword=专家：以色列或将面临“双线”作战)
 1. [海南71名旅游从业人员涉嫌违规被查](https://so.toutiao.com/search?keyword=海南71名旅游从业人员涉嫌违规被查)
 1. [海南离岛小车堵到“∞”型转圈圈](https://so.toutiao.com/search?keyword=海南离岛小车堵到“∞”型转圈圈)
 1. [专家：慕安会显现美欧协调不畅](https://so.toutiao.com/search?keyword=专家：慕安会显现美欧协调不畅)
 1. [Selina带男友和儿子回娘家拜年](https://so.toutiao.com/search?keyword=Selina带男友和儿子回娘家拜年)
 1. [三亚部分返程机票回落至3000元档](https://so.toutiao.com/search?keyword=三亚部分返程机票回落至3000元档)
-1. [航拍狼群穿越雪山](https://so.toutiao.com/search?keyword=航拍狼群穿越雪山)
 1. [港股四大强势板块或在节后A股复刻](https://so.toutiao.com/search?keyword=港股四大强势板块或在节后A股复刻)
 1. [《飞驰人生2》技术还原跨时空对视](https://so.toutiao.com/search?keyword=《飞驰人生2》技术还原跨时空对视)
-1. [泰国前总理他信将获释](https://so.toutiao.com/search?keyword=泰国前总理他信将获释)
 1. [曾黎 回村后被打回了原型](https://so.toutiao.com/search?keyword=曾黎+回村后被打回了原型)
 1. [《年会不能停》导演反对屏摄](https://so.toutiao.com/search?keyword=《年会不能停》导演反对屏摄)
-1. [一艘油轮在红海被导弹击中](https://so.toutiao.com/search?keyword=一艘油轮在红海被导弹击中)
-1. [黎巴嫩真主党：将升级在前线的行动](https://so.toutiao.com/search?keyword=黎巴嫩真主党：将升级在前线的行动)
 1. [一家人旅游时摆摊3天赚1000多](https://so.toutiao.com/search?keyword=一家人旅游时摆摊3天赚1000多)
 1. [孙龙成就“十四冬”双冠王](https://so.toutiao.com/search?keyword=孙龙成就“十四冬”双冠王)
 1. [外媒：美国阿拉斯加州分离情绪高涨](https://so.toutiao.com/search?keyword=外媒：美国阿拉斯加州分离情绪高涨)
@@ -73,7 +85,6 @@
 1. [男生扮滴滴司机送女友回家](https://so.toutiao.com/search?keyword=男生扮滴滴司机送女友回家)
 1. [2024还有这些假期](https://so.toutiao.com/search?keyword=2024还有这些假期)
 1. [东航20日至24日加密太原至博鳌航线](https://so.toutiao.com/search?keyword=东航20日至24日加密太原至博鳌航线)
-1. [媒体评薛之谦屏摄争议](https://so.toutiao.com/search?keyword=媒体评薛之谦屏摄争议)
 1. [景区回应男子带家人逆流下山](https://so.toutiao.com/search?keyword=景区回应男子带家人逆流下山)
 1. [男子足浴店提无理要求遭拒后逃单](https://so.toutiao.com/search?keyword=男子足浴店提无理要求遭拒后逃单)
 1. [傅园慧包车遇临时加价 司机被罚3万](https://so.toutiao.com/search?keyword=傅园慧包车遇临时加价+司机被罚3万)
@@ -83,7 +94,6 @@
 1. [IMF前高官看好中国中长期发展前景](https://so.toutiao.com/search?keyword=IMF前高官看好中国中长期发展前景)
 1. [美教授眼中的中国与孟加拉国年轻人](https://so.toutiao.com/search?keyword=美教授眼中的中国与孟加拉国年轻人)
 1. [网友晒返程后备箱：2只羊够吃一年](https://so.toutiao.com/search?keyword=网友晒返程后备箱：2只羊够吃一年)
-1. [如何评价断亲现象](https://so.toutiao.com/search?keyword=如何评价断亲现象)
 1. [新疆交警顶风冒雪抱受伤儿童转移](https://so.toutiao.com/search?keyword=新疆交警顶风冒雪抱受伤儿童转移)
 1. [学者谈“断亲”：主动社交意识觉醒](https://so.toutiao.com/search?keyword=学者谈“断亲”：主动社交意识觉醒)
 1. [《烟火人家》李衣锦整顿变态男上司](https://so.toutiao.com/search?keyword=《烟火人家》李衣锦整顿变态男上司)
