--- a/archives/toutiao-search/2024-02-18.md
+++ b/archives/toutiao-search/2024-02-18.md
@@ -1,59 +1,65 @@
 # 2024-02-18
 
-共 102 条
+共 104 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sun Feb 18 2024 05:00:47 GMT+0800 (China Standard Time) -->
-1. [乌军从顿涅茨克地区重镇撤军](https://so.toutiao.com/search?keyword=乌军从顿涅茨克地区重镇撤军)
+<!-- 最后更新时间 Sun Feb 18 2024 06:00:41 GMT+0800 (China Standard Time) -->
 1. [丽江文旅立案处理未买手镯被赶下车](https://so.toutiao.com/search?keyword=丽江文旅立案处理未买手镯被赶下车)
+1. [乌军从顿涅茨克地区重镇撤军](https://so.toutiao.com/search?keyword=乌军从顿涅茨克地区重镇撤军)
 1. [8组数据看热气腾腾的春节](https://so.toutiao.com/search?keyword=8组数据看热气腾腾的春节)
 1. [过年你花了多少钱](https://so.toutiao.com/search?keyword=过年你花了多少钱)
-1. [专家：以色列或将面临“双线”作战](https://so.toutiao.com/search?keyword=专家：以色列或将面临“双线”作战)
-1. [克宫：普京已知悉纳瓦利内死讯](https://so.toutiao.com/search?keyword=克宫：普京已知悉纳瓦利内死讯)
 1. [网友去年就在小区拍到瘦了的贾玲](https://so.toutiao.com/search?keyword=网友去年就在小区拍到瘦了的贾玲)
-1. [媒体：返程路上别发这样的朋友圈](https://so.toutiao.com/search?keyword=媒体：返程路上别发这样的朋友圈)
+1. [克宫：普京已知悉纳瓦利内死讯](https://so.toutiao.com/search?keyword=克宫：普京已知悉纳瓦利内死讯)
+1. [国台办再回应2名大陆渔民遇难](https://so.toutiao.com/search?keyword=国台办再回应2名大陆渔民遇难)
+1. [新疆特强沙尘暴：天空赤橙像异世界](https://so.toutiao.com/search?keyword=新疆特强沙尘暴：天空赤橙像异世界)
 1. [春节档电影好看吗](https://so.toutiao.com/search?keyword=春节档电影好看吗)
-1. [新疆14级大风](https://so.toutiao.com/search?keyword=新疆14级大风)
+1. [专家：以色列或将面临“双线”作战](https://so.toutiao.com/search?keyword=专家：以色列或将面临“双线”作战)
 1. [丽江游客回应不买5万玉器被赶下车](https://so.toutiao.com/search?keyword=丽江游客回应不买5万玉器被赶下车)
 1. [水果越酸维C含量越高？不一定](https://so.toutiao.com/search?keyword=水果越酸维C含量越高？不一定)
 1. [纳瓦利内妻子要求普京对其死亡负责](https://so.toutiao.com/search?keyword=纳瓦利内妻子要求普京对其死亡负责)
-1. [新疆特强沙尘暴：天空赤橙像异世界](https://so.toutiao.com/search?keyword=新疆特强沙尘暴：天空赤橙像异世界)
-1. [国台办再回应2名大陆渔民遇难](https://so.toutiao.com/search?keyword=国台办再回应2名大陆渔民遇难)
-1. [接连四部电影宣布撤出春节档](https://so.toutiao.com/search?keyword=接连四部电影宣布撤出春节档)
+1. [新疆14级大风](https://so.toutiao.com/search?keyword=新疆14级大风)
 1. [传比亚迪秦plus dmi将官降到7.98万](https://so.toutiao.com/search?keyword=传比亚迪秦plus+dmi将官降到7.98万)
-1. [女子返程高速4小时走了两三公里](https://so.toutiao.com/search?keyword=女子返程高速4小时走了两三公里)
 1. [买200箱牛肉却检验出猪肉成分](https://so.toutiao.com/search?keyword=买200箱牛肉却检验出猪肉成分)
-1. [女子高速上遭遇沙尘暴 车窗被砸烂](https://so.toutiao.com/search?keyword=女子高速上遭遇沙尘暴+车窗被砸烂)
 1. [自驾海南新能源车主抢老爸油车返程](https://so.toutiao.com/search?keyword=自驾海南新能源车主抢老爸油车返程)
+1. [女子返程高速4小时走了两三公里](https://so.toutiao.com/search?keyword=女子返程高速4小时走了两三公里)
+1. [接连四部电影宣布撤出春节档](https://so.toutiao.com/search?keyword=接连四部电影宣布撤出春节档)
+1. [湖南省南县捣毁一卖淫窝点 6人被抓](https://so.toutiao.com/search?keyword=湖南省南县捣毁一卖淫窝点+6人被抓)
+1. [海南离岛小车堵到“∞”型转圈圈](https://so.toutiao.com/search?keyword=海南离岛小车堵到“∞”型转圈圈)
+1. [国际金价近日跌破2000美元/盎司](https://so.toutiao.com/search?keyword=国际金价近日跌破2000美元/盎司)
+1. [女子过完年后归家发现厨房污水倒灌](https://so.toutiao.com/search?keyword=女子过完年后归家发现厨房污水倒灌)
 1. [《红毯先生》退出春节档](https://so.toutiao.com/search?keyword=《红毯先生》退出春节档)
-1. [“断亲潮”风靡 需对亲情重新反思](https://so.toutiao.com/search?keyword=“断亲潮”风靡+需对亲情重新反思)
-1. [石家庄井陉拉花申报万人拉花基尼斯](https://so.toutiao.com/search?keyword=石家庄井陉拉花申报万人拉花基尼斯)
-1. [Lady Gaga开特斯拉Cybertruck被嘲](https://so.toutiao.com/search?keyword=Lady+Gaga开特斯拉Cybertruck被嘲)
-1. [港股四大强势板块或在节后A股复刻](https://so.toutiao.com/search?keyword=港股四大强势板块或在节后A股复刻)
-1. [有人初六返程 12小时路开了25小时](https://so.toutiao.com/search?keyword=有人初六返程+12小时路开了25小时)
+1. [女子高速上遭遇沙尘暴 车窗被砸烂](https://so.toutiao.com/search?keyword=女子高速上遭遇沙尘暴+车窗被砸烂)
 1. [美国抗议者在佩洛西家门口倒粪](https://so.toutiao.com/search?keyword=美国抗议者在佩洛西家门口倒粪)
+1. [国乒不剃光头的不成文规定为何没了](https://so.toutiao.com/search?keyword=国乒不剃光头的不成文规定为何没了)
+1. [专家：慕安会显现美欧协调不畅](https://so.toutiao.com/search?keyword=专家：慕安会显现美欧协调不畅)
+1. [有人初六返程 12小时路开了25小时](https://so.toutiao.com/search?keyword=有人初六返程+12小时路开了25小时)
+1. [台当局引进印度劳工引多方担忧](https://so.toutiao.com/search?keyword=台当局引进印度劳工引多方担忧)
+1. [航拍狼群穿越雪山](https://so.toutiao.com/search?keyword=航拍狼群穿越雪山)
+1. [一家人旅游时摆摊3天赚1000多](https://so.toutiao.com/search?keyword=一家人旅游时摆摊3天赚1000多)
+1. [泰国前总理他信将获释](https://so.toutiao.com/search?keyword=泰国前总理他信将获释)
+1. [如何评价断亲现象](https://so.toutiao.com/search?keyword=如何评价断亲现象)
+1. [狗子在高速被堵到生下一窝狗崽](https://so.toutiao.com/search?keyword=狗子在高速被堵到生下一窝狗崽)
+1. [慕尼黑安全会议举办地爆发多场示威](https://so.toutiao.com/search?keyword=慕尼黑安全会议举办地爆发多场示威)
+1. [石家庄井陉拉花申报万人拉花基尼斯](https://so.toutiao.com/search?keyword=石家庄井陉拉花申报万人拉花基尼斯)
+1. [一艘油轮在红海被导弹击中](https://so.toutiao.com/search?keyword=一艘油轮在红海被导弹击中)
+1. [王毅会见蒙古国外长巴特策策格](https://so.toutiao.com/search?keyword=王毅会见蒙古国外长巴特策策格)
+1. [“断亲潮”风靡 需对亲情重新反思](https://so.toutiao.com/search?keyword=“断亲潮”风靡+需对亲情重新反思)
 1. [女子把马桶坐坏遭全家人围观](https://so.toutiao.com/search?keyword=女子把马桶坐坏遭全家人围观)
 1. [今年春节海南出岛为什么这么难](https://so.toutiao.com/search?keyword=今年春节海南出岛为什么这么难)
-1. [国际金价近日跌破2000美元/盎司](https://so.toutiao.com/search?keyword=国际金价近日跌破2000美元/盎司)
+1. [学者谈“断亲”：主动社交意识觉醒](https://so.toutiao.com/search?keyword=学者谈“断亲”：主动社交意识觉醒)
+1. [《第二十条》现实意义](https://so.toutiao.com/search?keyword=《第二十条》现实意义)
+1. [台媒感叹大陆科技发展](https://so.toutiao.com/search?keyword=台媒感叹大陆科技发展)
+1. [香港与内地商讨增加赴港自由行城市](https://so.toutiao.com/search?keyword=香港与内地商讨增加赴港自由行城市)
+1. [夫妻俩一个装甲车炮手一个坦克车长](https://so.toutiao.com/search?keyword=夫妻俩一个装甲车炮手一个坦克车长)
+1. [日本一县为提振生育率将赞助同学会](https://so.toutiao.com/search?keyword=日本一县为提振生育率将赞助同学会)
+1. [男生扮滴滴司机送女友回家](https://so.toutiao.com/search?keyword=男生扮滴滴司机送女友回家)
 1. [过完年的戒断反应](https://so.toutiao.com/search?keyword=过完年的戒断反应)
+1. [媒体：返程路上别发这样的朋友圈](https://so.toutiao.com/search?keyword=媒体：返程路上别发这样的朋友圈)
+1. [Lady Gaga开特斯拉Cybertruck被嘲](https://so.toutiao.com/search?keyword=Lady+Gaga开特斯拉Cybertruck被嘲)
+1. [港股四大强势板块或在节后A股复刻](https://so.toutiao.com/search?keyword=港股四大强势板块或在节后A股复刻)
 1. [这就叫富得流油吧](https://so.toutiao.com/search?keyword=这就叫富得流油吧)
-1. [一家人旅游时摆摊3天赚1000多](https://so.toutiao.com/search?keyword=一家人旅游时摆摊3天赚1000多)
 1. [保洁员捡一箱新手机 民警找到失主](https://so.toutiao.com/search?keyword=保洁员捡一箱新手机+民警找到失主)
 1. [ARM股价4日暴涨1.3倍](https://so.toutiao.com/search?keyword=ARM股价4日暴涨1.3倍)
-1. [湖南省南县捣毁一卖淫窝点 6人被抓](https://so.toutiao.com/search?keyword=湖南省南县捣毁一卖淫窝点+6人被抓)
-1. [泰国前总理他信将获释](https://so.toutiao.com/search?keyword=泰国前总理他信将获释)
-1. [狗子在高速被堵到生下一窝狗崽](https://so.toutiao.com/search?keyword=狗子在高速被堵到生下一窝狗崽)
-1. [王毅会见蒙古国外长巴特策策格](https://so.toutiao.com/search?keyword=王毅会见蒙古国外长巴特策策格)
-1. [日本一县为提振生育率将赞助同学会](https://so.toutiao.com/search?keyword=日本一县为提振生育率将赞助同学会)
-1. [《第二十条》现实意义](https://so.toutiao.com/search?keyword=《第二十条》现实意义)
-1. [慕尼黑安全会议举办地爆发多场示威](https://so.toutiao.com/search?keyword=慕尼黑安全会议举办地爆发多场示威)
-1. [航拍狼群穿越雪山](https://so.toutiao.com/search?keyword=航拍狼群穿越雪山)
-1. [女子过完年后归家发现厨房污水倒灌](https://so.toutiao.com/search?keyword=女子过完年后归家发现厨房污水倒灌)
-1. [专家：慕安会显现美欧协调不畅](https://so.toutiao.com/search?keyword=专家：慕安会显现美欧协调不畅)
-1. [台当局引进印度劳工引多方担忧](https://so.toutiao.com/search?keyword=台当局引进印度劳工引多方担忧)
-1. [如何评价断亲现象](https://so.toutiao.com/search?keyword=如何评价断亲现象)
-1. [台媒感叹大陆科技发展](https://so.toutiao.com/search?keyword=台媒感叹大陆科技发展)
-1. [一艘油轮在红海被导弹击中](https://so.toutiao.com/search?keyword=一艘油轮在红海被导弹击中)
 1. [男子大年初三看色情网站被骗22万](https://so.toutiao.com/search?keyword=男子大年初三看色情网站被骗22万)
 1. [双边本币互换协议总规模约4.16万亿](https://so.toutiao.com/search?keyword=双边本币互换协议总规模约4.16万亿)
 1. [美考虑为英特尔提供超百亿美元补贴](https://so.toutiao.com/search?keyword=美考虑为英特尔提供超百亿美元补贴)
@@ -61,7 +67,6 @@
 1. [湖北破获特大买卖国家机关证件案](https://so.toutiao.com/search?keyword=湖北破获特大买卖国家机关证件案)
 1. [日本男篮主帅：亚预赛想复仇中国队](https://so.toutiao.com/search?keyword=日本男篮主帅：亚预赛想复仇中国队)
 1. [15只业绩高预增股近三个月筹码集中](https://so.toutiao.com/search?keyword=15只业绩高预增股近三个月筹码集中)
-1. [国乒不剃光头的不成文规定为何没了](https://so.toutiao.com/search?keyword=国乒不剃光头的不成文规定为何没了)
 1. [黎巴嫩真主党：将升级在前线的行动](https://so.toutiao.com/search?keyword=黎巴嫩真主党：将升级在前线的行动)
 1. [媒体评薛之谦屏摄争议](https://so.toutiao.com/search?keyword=媒体评薛之谦屏摄争议)
 1. [广东为什么如此重视产业和科技](https://so.toutiao.com/search?keyword=广东为什么如此重视产业和科技)
@@ -79,7 +84,6 @@
 1. [纳赛尔将为姆巴佩举办盛大告别仪式](https://so.toutiao.com/search?keyword=纳赛尔将为姆巴佩举办盛大告别仪式)
 1. [姆巴佩弟弟：我会留在巴黎圣日耳曼](https://so.toutiao.com/search?keyword=姆巴佩弟弟：我会留在巴黎圣日耳曼)
 1. [海南71名旅游从业人员涉嫌违规被查](https://so.toutiao.com/search?keyword=海南71名旅游从业人员涉嫌违规被查)
-1. [海南离岛小车堵到“∞”型转圈圈](https://so.toutiao.com/search?keyword=海南离岛小车堵到“∞”型转圈圈)
 1. [Selina带男友和儿子回娘家拜年](https://so.toutiao.com/search?keyword=Selina带男友和儿子回娘家拜年)
 1. [三亚部分返程机票回落至3000元档](https://so.toutiao.com/search?keyword=三亚部分返程机票回落至3000元档)
 1. [《飞驰人生2》技术还原跨时空对视](https://so.toutiao.com/search?keyword=《飞驰人生2》技术还原跨时空对视)
@@ -91,7 +95,6 @@
 1. [女子欲插队怒怼提醒者](https://so.toutiao.com/search?keyword=女子欲插队怒怼提醒者)
 1. [媒体：欧洲对巴以问题与美分歧渐显](https://so.toutiao.com/search?keyword=媒体：欧洲对巴以问题与美分歧渐显)
 1. [普京催促33岁电力公司员工要孩子](https://so.toutiao.com/search?keyword=普京催促33岁电力公司员工要孩子)
-1. [男生扮滴滴司机送女友回家](https://so.toutiao.com/search?keyword=男生扮滴滴司机送女友回家)
 1. [2024还有这些假期](https://so.toutiao.com/search?keyword=2024还有这些假期)
 1. [东航20日至24日加密太原至博鳌航线](https://so.toutiao.com/search?keyword=东航20日至24日加密太原至博鳌航线)
 1. [景区回应男子带家人逆流下山](https://so.toutiao.com/search?keyword=景区回应男子带家人逆流下山)
@@ -104,6 +107,5 @@
 1. [美教授眼中的中国与孟加拉国年轻人](https://so.toutiao.com/search?keyword=美教授眼中的中国与孟加拉国年轻人)
 1. [网友晒返程后备箱：2只羊够吃一年](https://so.toutiao.com/search?keyword=网友晒返程后备箱：2只羊够吃一年)
 1. [新疆交警顶风冒雪抱受伤儿童转移](https://so.toutiao.com/search?keyword=新疆交警顶风冒雪抱受伤儿童转移)
-1. [学者谈“断亲”：主动社交意识觉醒](https://so.toutiao.com/search?keyword=学者谈“断亲”：主动社交意识觉醒)
 1. [《烟火人家》李衣锦整顿变态男上司](https://so.toutiao.com/search?keyword=《烟火人家》李衣锦整顿变态男上司)
 <!-- END TOUTIAO -->
